# SimpleOS

./: CMakeLists.txt  README.md
iso/boot/grub/: grub.cfg
src/: kernel.asm
